Fixed swiper button location on smaller screens

--- a/styles/swiper.scss
+++ b/styles/swiper.scss
@@ -13,7 +13,7 @@
 
   .swiper-button-next,
   .swiper-button-prev {
-    top: calc(50% - 100px);
+    top: calc(65% - 100px);
   }
 
   // .swiper-button-next,
@@ -75,5 +75,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+
+// Added a media query for smaller screens
+@media (max-width: 768px) {
+  .projectDetail .swiper-button-next,
+  .projectDetail .swiper-button-prev {
+    top: calc(95% - 100px); // Reset the top position for smaller screens
+    bottom: 20px; // Adjust the position for smaller screens
   }
 }
